--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div class="mainbody">
-        <div class="topholder">
-            <div class="logoHolder"><img class="logo" src="images/vbs_logo2_transparentbg.png" /></div>
-            <nav class="navbar">
-                <a class="navbutton" href="index.html"  ><h1>Home</h1></a>
-                <a class="navbutton" href="pricing.html"><h1>Pricing</h1></a>
+        <div class="topholder desktop">
+            <div class="logoHolder desktop"><img class="logo desktop" src="images/vbs_logo2_transparentbg.png" /></div>
+            <nav class="navbar desktop">
+                <a class="navbutton desktop" href="index.html"  ><h1>Home</h1></a>
+                <a class="navbutton desktop" href="pricing.html"><h1>Pricing</h1></a>
             </nav>
+            <a href="quote.html"><div class="request desktop">Request a Quote</div></a>
         </div>
         <div class="bodycard" id="card1" onclick="toggleCardHeight(1)">
             <div class="bodycardheader">Why Post Your Land?</div>
@@ -34,7 +35,7 @@
             </div>
         </div>
     </div>
-    <a href="quote.html"><div class="request">Request a Quote</div></a>
+    <a href="quote.html"><div class="request mobile">Request a Quote</div></a>
 
     <script src="index.js"></script>
 </body>
