--- a/quote.html
+++ b/quote.html
@@ -7,15 +7,17 @@
     <title>Vermont Boundary Service</title>
 </head>
 <body>
-    <div class="topholder">
-        <div class="logoHolder"><img class="logo" src="images/vbs_logo2_transparentbg.png" /></div>
-        <nav class="navbar">
-            <a class="navbutton" href="index.html"  ><h1>Home</h1></a>
-            <a class="navbutton" href="pricing.html"><h1>Pricing</h1></a>
+    <div class="topholder desktop">
+        <div class="logoHolder desktop"><img class="logo desktop" src="images/vbs_logo2_transparentbg.png" /></div>
+        <nav class="navbar desktop">
+            <a class="navbutton desktop" href="index.html"  ><h1>Home</h1></a>
+            <a class="navbutton desktop" href="pricing.html"><h1>Pricing</h1></a>
         </nav>
+       
     </div>
     <div class="mainbody" style="color: white; height: 100%;">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfQdEuw7pluR6AZJKInu0MaoWNatvh-qnvf0V2un8wXxe95hw/viewform?embedded=true" width="640" height="673" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
