--- a/index.html
+++ b/index.html
@@ -7,31 +7,50 @@
     <title>Vermont Boundary Service</title>
 </head>
 <body>
-    <div class="mainbody">
+    <div id="indexbg"></div>
+    <div class="mainbody desktop">
+        <a id='mobilenavlogo' href="index.html"><div class="mobilenavlogo homepage"><img class="logo" src="images/vbs_logo2_transparentbg2.png" /></div></a>
         <div class="topholder desktop">
-            <div class="logoHolder desktop"><img class="logo desktop" src="images/vbs_logo2_transparentbg.png" /></div>
+            <a id='navlogo' href="index.html"><div class="logoHolder desktop"><img class="logo desktop" src="images/vbs_logo2_transparentbg.png" /></div></a>
             <nav class="navbar desktop">
-                <a class="navbutton desktop" href="index.html"  ><h1>Home</h1></a>
-                <a class="navbutton desktop" href="pricing.html"><h1>Pricing</h1></a>
+                <a class="navbutton desktop" id="home" href="index.html"><h1>Home</h1></a>
+                <a class="navbutton desktop" id="pricing" href="pricing.html"><h1>Pricing</h1></a>
+                <a class="navbutton desktop" id="work" href="work.html"><h1>Work</h1></a>
             </nav>
             <a href="quote.html"><div class="request desktop">Request a Quote</div></a>
         </div>
-        <div class="bodycard" id="card1" onclick="toggleCardHeight(1)">
-            <div class="bodycardheader">Why Post Your Land?</div>
-            <div class="bodycardtextholder" id="cardtextholder1">
+        <div class="bodycard desktop" id="card1">
+            <div class="bodycardheader desktop">Why Post Your Land?</div>
+            <div class="bodycardtextholder desktop" id="cardtextholder1">
                 <div class="bodycardtext">Vermont is home to tens of thousands of men and women who engage in hunting and other outdoor recreational activities throughout all times of the year. On most occasions, these people are carrying rifles and shotguns with the intent of tagging a deer or a bear. While hunting is statistically a safe activity, there are many examples of life-altering hunting accidents taking place in Vermont. </div>
             </div>
         </div>
-        <div class="bodycard" id="card2" onclick="toggleCardHeight(2)">
-            <div class="bodycardheader">Why Vermont Boundary Services?</div>
-            <div class="bodycardtextholder" id="cardtextholder2">
+        <div class="bodycard desktop" id="card2">
+            <div class="bodycardheader desktop">Why Vermont Boundary Services?</div>
+            <div class="bodycardtextholder desktop" id="cardtextholder2">
                 <div class="bodycardtext">The State of Vermont has specific requirements for land to be considered legally enclosed (posted) to allow for enforcement of the posted land law. If your land is not posted exactly within the standards laid out under the law, it is both ineffective and unenforceable. </div>
             </div>
         </div>
-        <div class="bodycard" id="card3" onclick="toggleCardHeight(3)">
-            <div class="bodycardheader">What Do I Get?</div>
-            <div class="bodycardtextholder" id="cardtextholder3">
+        <div class="bodycard desktop" id="card3">
+            <div class="bodycardheader desktop">What Do I Get?</div>
+            <div class="bodycardtextholder desktop" id="cardtextholder3">
                 <div class="bodycardtext">As a customer of Vermont Boundary Services, you will receive a high level of support throughout the entirety of the service process. At the conclusion of service, your land will be legally enclosed in accordance with Vermont law and you will be provided with professional documentation detailing the service that was completed. </div>
+            </div>
+        </div>
+        <div class="bodycard desktop" id="card3">
+            <div class="bodycardheader desktop">Contact Us!</div>
+            <div class="contactholder desktop">
+                <div class="bodycardtext">If you would like a free quote, just click the 'Request a Quote' button on this website.</div>
+                <div class="bodycardtext">Follow us on social media here:</div>
+                <div class="socials">
+                    <div class="socalimg">F</div>
+                    <div class="socalimg">I</div>
+                    <div class="socalimg">T</div>
+                </div>
+                <div class="bodycardtext">Email us at:</div>
+                <div class="socials">
+                    foster@vermontboundaryservice.com
+                </div>
             </div>
         </div>
     </div>
