--- a/pricing.html
+++ b/pricing.html
@@ -7,28 +7,31 @@
     <title>Vermont Boundary Service</title>
 </head>
 <body>
-    <div class="mainbody">
+    <div id="pricingbg"></div>
+    <div class="mainbody desktop">
+        <a id='mobilenavlogo' href="index.html"><div class="mobilenavlogo"><img class="logo" src="images/vbs_logo2_transparentbg2.png" /></div></a>
         <div class="topholder desktop">
-            <div class="logoHolder desktop"><img class="logo desktop" src="images/vbs_logo2_transparentbg.png" /></div>
+            <a id='navlogo' href="index.html"><div class="logoHolder desktop"><img class="logo desktop" src="images/vbs_logo2_transparentbg.png" /></div></a>
             <nav class="navbar desktop">
-                <a class="navbutton desktop" href="index.html"  ><h1>Home</h1></a>
-                <a class="navbutton desktop" href="pricing.html"><h1>Pricing</h1></a>
+                <a class="navbutton desktop" id="home" href="index.html"><h1>Home</h1></a>
+                <a class="navbutton desktop" id="pricing" href="pricing.html"><h1>Pricing</h1></a>
+                <a class="navbutton desktop" id="work" href="work.html"><h1>Work</h1></a>
             </nav>
             <a href="quote.html"><div class="request desktop">Request a Quote</div></a>
         </div>
-        <div class="bodycard">
-            <div class="bodycardtextholder">
-                <div class="bodycardtext"><b>Third Tier</b> packages are designed to be the most cost-friendly option and are most popular for large (25+ acre) non-residential properties. Metal posts are driven two feet into the ground to which polymer signage is attached. Signature and year validation stickers are then affixed to the signs.</div>
+        <div class="bodycard tier" id="card1">
+            <div class="tiertextholder">
+                <div class="tiertext"><b>Third Tier</b> packages are designed to be the most cost-friendly option and are most popular for large (25+ acre) non-residential properties. Metal posts are driven two feet into the ground to which polymer signage is attached. Signature and year validation stickers are then affixed to the signs.</div>
             </div>
         </div>
-        <div class="bodycard">
-            <div class="bodycardtextholder">
-                <div class="bodycardtext"><b>Second Tier</b> packages are a mixture of metal posts and wooden 4”x4”x8’ weather-treated posts. The wooden posts are typically placed on the road-facing boundaries of the parcel and are set two feet in the ground and are secured using tamped gravel or, in some cases, concrete. Aluminum or poly signs are affixed to the posts and signature and year validation stickers are attached. Second Tier packages offer the presentation of the most premium package while maintaining a utilitarian look for the remainder of the property. Weatherproofing stains are available on all wooden posts. </div>
+        <div class="bodycard tier" id="card2">
+            <div class="tiertextholder" id="secondtier">
+                <div class="tiertext"><b>Second Tier</b> packages are a mixture of metal posts and wooden 4”x4”x8’ weather-treated posts. The wooden posts are typically placed on the road-facing boundaries of the parcel and are set two feet in the ground and are secured using tamped gravel or, in some cases, concrete. Aluminum or poly signs are affixed to the posts and signature and year validation stickers are attached. Second Tier packages offer the presentation of the most premium package while maintaining a utilitarian look for the remainder of the property. Weatherproofing stains are available on all wooden posts. </div>
             </div>
         </div>
-        <div class="bodycard">
-            <div class="bodycardtextholder">
-                <div class="bodycardtext"><b>First Tier</b> packages offer weather treated 4”x4”x8’ wooden posts around the entire boundary of the property wherever possible. The posts are set two feet in the ground and are secured using tamped gravel or concrete. The signage is aluminum with property and contact information printed directly onto the sign. Signature and year validation stickers are affixed to the signs. The wooden posts are treated with weatherproof stain after a curing period to extend the life of the posts. All Third Tier packages include re-validation of the signage and re-registration of the parcel one year after the initial service. </div>
+        <div class="bodycard tier" id="card3">
+            <div class="tiertextholder">
+                <div class="tiertext"><b>First Tier</b> packages offer weather treated 4”x4”x8’ wooden posts around the entire boundary of the property wherever possible. The posts are set two feet in the ground and are secured using tamped gravel or concrete. The signage is aluminum with property and contact information printed directly onto the sign. Signature and year validation stickers are affixed to the signs. The wooden posts are treated with weatherproof stain after a curing period to extend the life of the posts. All Third Tier packages include re-validation of the signage and re-registration of the parcel one year after the initial service. </div>
             </div>
         </div>
     </div>
