--- a/work.html
+++ b/work.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Vermont Boundary Service</title>
 </head>
-<body style="background-image: url('images/deer.jpg'); background-size: cover;">
+<body>
+    <div id="indexbg"></div>
     <div class="mainbody desktop">
         <a id='mobilenavlogo' href="index.html"><div class="mobilenavlogo"><img class="logo" src="images/vbs_logo2_transparentbg2.png" /></div></a>
         <div class="topholder desktop">
@@ -16,16 +17,17 @@
                 <a class="navbutton desktop" id="pricing" href="pricing.html"><h1>Pricing</h1></a>
                 <a class="navbutton desktop" id="work" href="work.html"><h1>Work</h1></a>
             </nav>
-            <a style="opacity: 0;"quote.html"><div class="request desktop">Request a Quote</div></a>
+            <a href="quote.html"><div class="request desktop">Request a Quote</div></a>
         </div>
-            
-       
+        <div class="bodycard desktop" id="card1">
+            <div class="bodycardheader desktop">We are excited to show you are work!</div>
+            <div class="bodycardtextholder desktop" id="cardtextholder1">
+                <div class="bodycardtext">This is where you will see our completed jobs for yourself!</div>
+            </div>
+        </div>
     </div>
-   
-    <div class="mainbody" style=" z-index: 100; color: white; height: 100%;">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfQdEuw7pluR6AZJKInu0MaoWNatvh-qnvf0V2un8wXxe95hw/viewform?embedded=true" width="640" height="673" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-    </div>
-    <script src="index.js"></script>
+    <a href="quote.html"><div class="request mobile">Request a Quote</div></a>
 
+    <script src="index.js"></script>
 </body>
 </html>
