--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
         <div class="bodycard desktop" id="card1">
             <div class="bodycardheader desktop">Why Post Your Land?</div>
             <div class="bodycardtextholder desktop" id="cardtextholder1">
-                <div class="bodycardtext">Vermont is home to tens of thousands of men and women who engage in hunting and other outdoor recreational activities throughout all times of the year. On most occasions, these people are carrying rifles and shotguns with the intent of tagging a deer or a bear. While hunting is statistically a safe activity, there are many examples of life-altering hunting accidents taking place in Vermont. </div>
+                <div class="bodycardtext">Vermont's outdoor community sees many people engaged in hunting and recreational activities year-round. While generally safe, hunting accidents can be life-altering. Instances have included mistaken identity shootings and stray bullets damaging homes. According to state law, Vermont allows hunting on unposted private land without permission. Posting your land enhances safety, preventing unauthorized firearm discharge and safeguarding your property and family.
+                </div>
             </div>
         </div>
         <div class="bodycard desktop" id="card2">
             <div class="bodycardheader desktop">Why Vermont Boundary Services?</div>
             <div class="bodycardtextholder desktop" id="cardtextholder2">
-                <div class="bodycardtext">The State of Vermont has specific requirements for land to be considered legally enclosed (posted) to allow for enforcement of the posted land law. If your land is not posted exactly within the standards laid out under the law, it is both ineffective and unenforceable. </div>
+                <div class="bodycardtext">Vermont mandates specific criteria for legally posted land to enforce the law effectively. Incorrectly posted land is both ineffective and unenforceable. Vermont Boundary Services offers specialized expertise, using the right tools to post your land within legal standards, ensuring visibility. Our service guarantees an effectively posted and legally enforceable property boundary, providing the security you need.
+                </div>
             </div>
         </div>
         <div class="bodycard desktop" id="card3">
@@ -43,13 +45,11 @@
                 <div class="bodycardtext">If you would like a free quote, just click the 'Request a Quote' button on this website.</div>
                 <div class="bodycardtext">Follow us on social media here:</div>
                 <div class="socials">
-                    <div class="socalimg">F</div>
-                    <div class="socalimg">I</div>
-                    <div class="socalimg">T</div>
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=61552863158534"><img class="socalimg" src="images/fb.png" /></a>
                 </div>
                 <div class="bodycardtext">Email us at:</div>
                 <div class="socials">
-                    foster@vermontboundaryservice.com
+                    foster@vermontboundaryservices.com
                 </div>
             </div>
         </div>
