--- a/pricing.html
+++ b/pricing.html
@@ -34,6 +34,17 @@
                 <div class="tiertext"><b>First Tier</b> packages offer weather treated 4”x4”x8’ wooden posts around the entire boundary of the property wherever possible. The posts are set two feet in the ground and are secured using tamped gravel or concrete. The signage is aluminum with property and contact information printed directly onto the sign. Signature and year validation stickers are affixed to the signs. The wooden posts are treated with weatherproof stain after a curing period to extend the life of the posts. All Third Tier packages include re-validation of the signage and re-registration of the parcel one year after the initial service. </div>
             </div>
         </div>
+        
+        <div class="bodycard tier" id="card3">
+            <div class="tiertextholder">
+                <div class="tiertext"><b>Service Cost by Acre:</b><br /><br />As most parcels contain varying terrain and features, a rough estimate of $50.00 an acre can give a somewhat accurate estimate for service costs on typical parcels located in Vermont. 
+                    <br /><br />Flat Parcel: $30.00/acre (Third Tier) $40.00/acre (Second Tier) $50.00/acre (First Tier)
+                    <br /><br />Open Hardwoods: $40.00/acre  (Third Tier) $50.00/acre (Second Tier) $60.00/acre (First Tier)
+                    <br /><br />Briars/Brush:$40.00/acre (Third Tier) $50.00/acre (Second Tier) $60.00/acre (First Tier)
+                    <br /><br />Marsh: $45.00/acre (Third Tier) $55.00/acre (Second Tier) $65.00/acre (First Tier)
+                    <br /><br /><b>Using a square, ten acre, mixed-terrain parcel at a Second Tier level, an estimated service price range of $612.00 - $796.00 can be provided.</b> </div>
+            </div>
+        </div>
     </div>
     <a href="quote.html"><div class="request mobile">Request a Quote</div></a>
     <script src="index.js"></script>
