--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
             <a href="quote.html"><div class="request desktop">Request a Quote</div></a>
         </div>
         <div class="bodycard desktop" id="card1">
-            <div class="bodycardheader desktop">We are excited to show you are work!</div>
+            <div class="bodycardheader desktop">We are excited to show you our work!</div>
             <div class="bodycardtextholder desktop" id="cardtextholder1">
                 <div class="bodycardtext">This is where you will see our completed jobs for yourself!</div>
             </div>
